<resources>
    <string name="app_name">DAM_BrandonIsla</string>
    <string name="examen_admisión">EXAMEN DE ADMISIÓN UNTELS 2024</string>
    <string name="apellidos_nombre">Apellidos y Nombre</string>
    <string name="apellidos_y_nombre">Apellidos y Nombre:</string>
    <string name="apellidosnombres" />
    <string name="correo">Correo Electrónico:</string>
    <string name="clave">Clave:</string>
    <string name="carrera">Carrera:</string>
    <string name="RB_IET">Ingeniería Electrónica y Telecomunicaciones</string>
    <string name="RB_IS">Ingeniería de Sistemas</string>
    <string name="RB_IA">Ingeniería Ambiental</string>
    <string name="RB_IM">Ingeniería Mecánica</string>
    <string name="RB_AE">Administración de Empresas</string>
    <string name="FechaNacimiento">"Fecha de Nacimiento: "</string>
    <string name="Fecha">Fecha de Nacimiento:</string>
    <string name="FechadeNacimiento" />
    <string name="pregunta1">¿Por qué medio se enteró de la convocatoria?</string>
    <string name="boxRadio">Radio</string>
    <string name="boxInternet">Internet</string>
    <string name="boxAmigo" />
    <string name="BoxAmigo">Amigo</string>
    <string name="boxPublicidad">Publicidad</string>
    <string name="boton_enviar">Enviar</string>
</resources>