<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2C528C"
    android:foregroundTint="#FFC107"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="299dp"
        android:layout_height="49dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:background="#FFC107"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/examen_admisión"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textIsSelectable="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/apellidos_y_nombre"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="199dp"
        android:layout_height="39dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="#FFC107"
        android:drawableTint="#FFC107"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/apellidosnombres"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.55" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/correo"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="199dp"
        android:layout_height="38dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="#FFC107"
        android:drawableTint="#FFC107"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/clave"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:backgroundTint="#FFC107"
        android:drawableTint="#FFC107"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/carrera"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/Fecha"
        app:layout_constraintTop_toBottomOf="@+id/Fecha" />

    <RadioGroup
        android:id="@+id/GrupoCarrerasBoton"
        android:layout_width="253dp"
        android:layout_height="152dp"
        android:layout_marginTop="1dp"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <RadioButton
            android:id="@+id/radioButtonIET"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:buttonTint="#FFC107"
            android:shadowColor="#FFC107"
            android:text="@string/RB_IET"
            android:textColor="@color/white"
            android:textColorHighlight="#FFC107"
            android:textColorHint="#FFC107"
            android:textColorLink="#FFC107"
            android:textSize="10sp"
            app:useMaterialThemeColors="true" />

        <RadioButton
            android:id="@+id/radioButtonIS"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:buttonTint="#FFC107"
            android:shadowColor="#FFC107"
            android:text="@string/RB_IS"
            android:textColor="@color/white"
            android:textColorHighlight="#FFC107"
            android:textColorHint="#FFC107"
            android:textColorLink="#FFC107"
            android:textSize="10sp"
            app:useMaterialThemeColors="true" />

        <RadioButton
            android:id="@+id/radioButtonIA"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:buttonTint="#FFC107"
            android:shadowColor="#FFC107"
            android:text="@string/RB_IA"
            android:textColor="@color/white"
            android:textColorHighlight="#FFC107"
            android:textColorHint="#FFC107"
            android:textColorLink="#FFC107"
            android:textSize="10sp"
            app:useMaterialThemeColors="true" />

        <RadioButton
            android:id="@+id/radioButtonIM"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:buttonTint="#FFC107"
            android:shadowColor="#FFC107"
            android:text="@string/RB_IM"
            android:textColor="@color/white"
            android:textColorHighlight="#FFC107"
            android:textColorHint="#FFC107"
            android:textColorLink="#FFC107"
            android:textSize="10sp"
            app:useMaterialThemeColors="true" />

        <RadioButton
            android:id="@+id/radioButtonAE"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:buttonTint="#FFC107"
            android:shadowColor="#FFC107"
            android:text="@string/RB_AE"
            android:textColor="@color/white"
            android:textColorHighlight="#FFC107"
            android:textColorHint="#FFC107"
            android:textColorLink="#FFC107"
            android:textSize="10sp"
            app:useMaterialThemeColors="true" />
    </RadioGroup>

    <TextView
        android:id="@+id/Fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/Fecha"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/Fecha_Nacimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:backgroundTint="#FFC107"
        android:drawableTint="#FFC107"
        android:ems="10"
        android:inputType="date"
        android:textColor="@color/white"
        android:textColorHighlight="#FFC107"
        android:textColorHint="#FFC107"
        android:textColorLink="#FFC107"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/Fecha"
        app:layout_constraintStart_toEndOf="@+id/Fecha"
        app:layout_constraintTop_toTopOf="@+id/Fecha"
        tools:text="@string/FechadeNacimiento" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/pregunta1"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/GrupoCarrerasBoton"
        app:layout_constraintTop_toBottomOf="@+id/GrupoCarrerasBoton" />

    <CheckBox
        android:id="@+id/checkBoxRadio"
        android:layout_width="86dp"
        android:layout_height="25dp"
        android:layout_marginTop="5dp"
        android:buttonTint="#FFC107"
        android:text="@string/boxRadio"
        android:textColor="@color/white"
        android:textColorHighlight="#FFC107"
        android:textColorLink="#FFC107"
        android:textSize="10sp"
        app:buttonIconTint="#FFC107"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <CheckBox
        android:id="@+id/checkBoxInternet"
        android:layout_width="87dp"
        android:layout_height="24dp"
        android:layout_marginTop="5dp"
        android:buttonTint="#FFC107"
        android:text="@string/boxInternet"
        android:textColor="@color/white"
        android:textColorHighlight="#FFC107"
        android:textColorLink="#FFC107"
        android:textSize="10sp"
        app:buttonIconTint="#FFC107"
        app:layout_constraintStart_toStartOf="@+id/checkBoxRadio"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxRadio" />

    <CheckBox
        android:id="@+id/checkBoxPublicidad"
        android:layout_width="109dp"
        android:layout_height="29dp"
        android:layout_marginTop="5dp"
        android:buttonTint="#FFC107"
        android:text="@string/boxPublicidad"
        android:textColor="@color/white"
        android:textColorHighlight="#FFC107"
        android:textColorLink="#FFC107"
        android:textSize="10sp"
        app:buttonIconTint="#FFC107"
        app:layout_constraintStart_toStartOf="@+id/checkBoxAmigo"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxAmigo" />

    <CheckBox
        android:id="@+id/checkBoxAmigo"
        android:layout_width="80dp"
        android:layout_height="28dp"
        android:layout_marginTop="5dp"
        android:buttonTint="#FFC107"
        android:text="@string/BoxAmigo"
        android:textColor="@color/white"
        android:textColorHighlight="#FFC107"
        android:textColorLink="#FFC107"
        android:textSize="10sp"
        app:buttonIconTint="#FFC107"
        app:layout_constraintStart_toStartOf="@+id/checkBoxInternet"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxInternet" />

    <Button
        android:id="@+id/buttonEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="#FFC107"
        android:backgroundTint="#FFC107"
        android:drawableLeft="@drawable/baseline_content_paste_go_24"
        android:foregroundTint="#FFC107"
        android:shadowColor="#FFC107"
        android:text="@string/boton_enviar"
        android:textColor="@color/white"
        android:textColorHighlight="#FFC107"
        android:textColorHint="#FFC107"
        android:textColorLink="#FFC107"
        android:textStyle="bold"
        app:iconTint="#FFC107"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxPublicidad"
        app:strokeColor="#FFC107" />

    <ImageView
        android:id="@+id/imageuntels"
        android:layout_width="66dp"
        android:layout_height="91dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEnviar"
        app:srcCompat="@drawable/untels" />

</androidx.constraintlayout.widget.ConstraintLayout>